// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doGetOrderDetails() action creator should create the correct actions for when the get order details procedure is successful without receiving options: get order details success payload without receiving options 1`] = `
Object {
  "guest": false,
  "meta": Object {
    "isSplitByMerchantOrderCode": true,
    "orderId": "3558DS",
  },
  "payload": Object {
    "entities": Object {
      "brands": Object {
        "220482": Object {
          "description": "German born Tomas Maier headed to Paris.",
          "id": 220482,
          "name": "Tomas Maier",
          "priceType": 0,
        },
      },
      "categories": Object {
        "135967": Object {
          "gender": 0,
          "id": 135967,
          "name": "Clothing",
          "parentId": 0,
        },
        "135974": Object {
          "gender": 1,
          "id": 135974,
          "name": "Lifestyle",
          "parentId": 0,
        },
        "135981": Object {
          "gender": 0,
          "id": 135981,
          "name": "Trousers",
          "parentId": 135967,
        },
        "136273": Object {
          "gender": 0,
          "id": 136273,
          "name": "Palazzo Pants",
          "parentId": 135981,
        },
        "136301": Object {
          "gender": 0,
          "id": 136301,
          "name": "Shoes",
          "parentId": 0,
        },
        "136308": Object {
          "gender": 0,
          "id": 136308,
          "name": "Sandals",
          "parentId": 136301,
        },
        "136380": Object {
          "gender": 1,
          "id": 136380,
          "name": "Travel Accessories",
          "parentId": 135974,
        },
        "136383": Object {
          "gender": 0,
          "id": 136383,
          "name": "Lifestyle",
          "parentId": 0,
        },
        "136392": Object {
          "gender": 0,
          "id": 136392,
          "name": "Luggage & Travel Accessories",
          "parentId": 136383,
        },
      },
      "merchants": Object {
        "10537": Object {
          "id": 10537,
        },
        "10538": Object {
          "id": 10538,
        },
      },
      "orderItems": Object {
        "10070161": Object {
          "DEPRECATED_images": Object {
            "contextual": Object {},
            "details": Array [
              Object {
                "sources": Object {
                  "200": "https://cdn-images.farfetch.com/12/09/16/86/12091686_11099953_200.jpg",
                },
                "type": "image",
              },
              Object {
                "sources": Object {
                  "200": "https://cdn-images.farfetch.com/12/09/16/86/12091686_11099954_200.jpg",
                },
                "type": "image",
              },
              Object {
                "sources": Object {
                  "200": "https://cdn-images.farfetch.com/12/09/16/86/12091686_11099955_200.jpg",
                },
                "type": "image",
              },
            ],
            "primary": Object {
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/09/16/86/12091686_11099951_200.jpg",
              },
              "type": "image",
            },
            "secondary": Object {
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/09/16/86/12091686_11099952_200.jpg",
              },
              "type": "image",
            },
          },
          "attributes": Array [
            Object {
              "description": "Scale",
              "type": 2,
              "value": "204",
            },
            Object {
              "description": "Size",
              "type": 0,
              "value": "24",
            },
            Object {
              "description": "SizeDescription",
              "type": 1,
              "value": "7.5",
            },
          ],
          "brand": 220482,
          "categories": Array [
            136301,
            136308,
          ],
          "colors": Array [
            Object {
              "color": Object {
                "id": 112495,
                "name": "Black",
              },
              "tags": Array [
                "MainColor",
              ],
            },
            Object {
              "color": Object {
                "id": 0,
                "name": "BLACK",
              },
              "tags": Array [
                "DesignerColor",
              ],
            },
          ],
          "creationChannel": null,
          "customAttributes": null,
          "id": 10070161,
          "images": Array [
            Object {
              "order": 1,
              "size": "200",
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/09/16/86/12091686_11099951_200.jpg",
              },
              "url": "https://cdn-images.farfetch.com/12/09/16/86/12091686_11099951_200.jpg",
            },
            Object {
              "order": 2,
              "size": "200",
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/09/16/86/12091686_11099952_200.jpg",
              },
              "url": "https://cdn-images.farfetch.com/12/09/16/86/12091686_11099952_200.jpg",
            },
            Object {
              "order": 3,
              "size": "200",
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/09/16/86/12091686_11099953_200.jpg",
              },
              "url": "https://cdn-images.farfetch.com/12/09/16/86/12091686_11099953_200.jpg",
            },
            Object {
              "order": 4,
              "size": "200",
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/09/16/86/12091686_11099954_200.jpg",
              },
              "url": "https://cdn-images.farfetch.com/12/09/16/86/12091686_11099954_200.jpg",
            },
            Object {
              "order": 5,
              "size": "200",
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/09/16/86/12091686_11099955_200.jpg",
              },
              "url": "https://cdn-images.farfetch.com/12/09/16/86/12091686_11099955_200.jpg",
            },
          ],
          "isCustomizable": false,
          "isExclusive": false,
          "merchant": 10538,
          "merchantOrderId": 100001339,
          "orderItemStatus": null,
          "orderStatus": "CheckingStock",
          "price": Object {
            "discountExclTaxes": 0,
            "discountInclTaxes": 0,
            "discountRate": 0,
            "formattedPrice": "375,00 €",
            "formattedPriceWithoutCurrency": null,
            "formattedPriceWithoutDiscount": "375,00 €",
            "formattedPriceWithoutDiscountAndCurrency": null,
            "priceExclTaxes": 256.49,
            "priceInclTaxes": 375,
            "priceInclTaxesWithoutDiscount": 375,
            "tags": Array [
              "DDP",
            ],
            "taxType": "DDP",
            "taxesRate": 46.2071,
            "taxesValue": 118.51,
          },
          "productId": 12091686,
          "productSlug": "stud-sandal-12091686",
          "shippingService": Object {
            "description": "Express",
            "id": 33,
            "maxEstimatedDeliveryHour": 0,
            "minEstimatedDeliveryHour": 0,
            "name": "DHL Express",
            "type": "Express",
          },
          "shortDescription": "stud sandal",
          "size": "7.5",
          "tag": Object {
            "id": undefined,
            "name": undefined,
          },
        },
        "10070162": Object {
          "DEPRECATED_images": Object {
            "contextual": Object {},
            "details": Array [
              Object {
                "sources": Object {
                  "200": "https://cdn-images.farfetch.com/12/51/12/41/12511241_11981401_200.jpg",
                },
                "type": "image",
              },
              Object {
                "sources": Object {
                  "200": "https://cdn-images.farfetch.com/12/51/12/41/12511241_11981402_200.jpg",
                },
                "type": "image",
              },
              Object {
                "sources": Object {
                  "200": "https://cdn-images.farfetch.com/12/51/12/41/12511241_11981404_200.jpg",
                },
                "type": "image",
              },
            ],
            "primary": Object {
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/51/12/41/12511241_11981398_200.jpg",
              },
              "type": "image",
            },
            "secondary": Object {
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/51/12/41/12511241_11981399_200.jpg",
              },
              "type": "image",
            },
          },
          "attributes": Array [
            Object {
              "description": "Scale",
              "type": 2,
              "value": "125",
            },
            Object {
              "description": "Size",
              "type": 0,
              "value": "23",
            },
            Object {
              "description": "SizeDescription",
              "type": 1,
              "value": "28",
            },
          ],
          "brand": 220482,
          "categories": Array [
            135967,
            135981,
            136273,
          ],
          "colors": Array [
            Object {
              "color": Object {
                "id": 112495,
                "name": "Black",
              },
              "tags": Array [
                "MainColor",
              ],
            },
            Object {
              "color": Object {
                "id": 0,
                "name": "9100 CHALK",
              },
              "tags": Array [
                "DesignerColor",
              ],
            },
          ],
          "creationChannel": null,
          "customAttributes": null,
          "id": 10070162,
          "images": Array [
            Object {
              "order": 1,
              "size": "200",
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/51/12/41/12511241_11981398_200.jpg",
              },
              "url": "https://cdn-images.farfetch.com/12/51/12/41/12511241_11981398_200.jpg",
            },
            Object {
              "order": 2,
              "size": "200",
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/51/12/41/12511241_11981399_200.jpg",
              },
              "url": "https://cdn-images.farfetch.com/12/51/12/41/12511241_11981399_200.jpg",
            },
            Object {
              "order": 3,
              "size": "200",
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/51/12/41/12511241_11981401_200.jpg",
              },
              "url": "https://cdn-images.farfetch.com/12/51/12/41/12511241_11981401_200.jpg",
            },
            Object {
              "order": 4,
              "size": "200",
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/51/12/41/12511241_11981402_200.jpg",
              },
              "url": "https://cdn-images.farfetch.com/12/51/12/41/12511241_11981402_200.jpg",
            },
            Object {
              "order": 5,
              "size": "200",
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/51/12/41/12511241_11981404_200.jpg",
              },
              "url": "https://cdn-images.farfetch.com/12/51/12/41/12511241_11981404_200.jpg",
            },
          ],
          "isCustomizable": false,
          "isExclusive": false,
          "merchant": 10537,
          "merchantOrderId": 100001340,
          "orderItemStatus": null,
          "orderStatus": "CheckingStock",
          "price": Object {
            "discountExclTaxes": 0,
            "discountInclTaxes": 0,
            "discountRate": 0,
            "formattedPrice": "690,00 €",
            "formattedPriceWithoutCurrency": null,
            "formattedPriceWithoutDiscount": "690,00 €",
            "formattedPriceWithoutDiscountAndCurrency": null,
            "priceExclTaxes": 433.68,
            "priceInclTaxes": 690,
            "priceInclTaxesWithoutDiscount": 690,
            "tags": Array [
              "DDP",
            ],
            "taxType": "DDP",
            "taxesRate": 59.1032,
            "taxesValue": 256.32,
          },
          "productId": 12511241,
          "productSlug": "wide-leg-pant-12511241",
          "shippingService": Object {
            "description": "Express",
            "id": 33,
            "maxEstimatedDeliveryHour": 0,
            "minEstimatedDeliveryHour": 0,
            "name": "DHL Express",
            "type": "Express",
          },
          "shortDescription": "wide leg pant",
          "size": "28",
          "tag": Object {
            "id": undefined,
            "name": undefined,
          },
        },
        "10070163": Object {
          "DEPRECATED_images": Object {
            "contextual": Object {},
            "details": Array [
              Object {
                "sources": Object {
                  "200": "https://cdn-images.farfetch.com/12/09/26/33/12092633_10778716_200.jpg",
                },
                "type": "image",
              },
            ],
            "primary": Object {
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/09/26/33/12092633_10778720_200.jpg",
              },
              "type": "image",
            },
            "secondary": Object {
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/09/26/33/12092633_10778718_200.jpg",
              },
              "type": "image",
            },
          },
          "attributes": Array [
            Object {
              "description": "Scale",
              "type": 2,
              "value": "14",
            },
            Object {
              "description": "Size",
              "type": 0,
              "value": "17",
            },
            Object {
              "description": "SizeDescription",
              "type": 1,
              "value": "OS",
            },
          ],
          "brand": 220482,
          "categories": Array [
            135974,
            136383,
            136380,
            136392,
          ],
          "colors": Array [
            Object {
              "color": Object {
                "id": 112495,
                "name": "Black",
              },
              "tags": Array [
                "MainColor",
              ],
            },
            Object {
              "color": Object {
                "id": 0,
                "name": "GRAPHITE",
              },
              "tags": Array [
                "DesignerColor",
              ],
            },
          ],
          "creationChannel": null,
          "customAttributes": null,
          "id": 10070163,
          "images": Array [
            Object {
              "order": 1,
              "size": "200",
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/09/26/33/12092633_10778720_200.jpg",
              },
              "url": "https://cdn-images.farfetch.com/12/09/26/33/12092633_10778720_200.jpg",
            },
            Object {
              "order": 2,
              "size": "200",
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/09/26/33/12092633_10778718_200.jpg",
              },
              "url": "https://cdn-images.farfetch.com/12/09/26/33/12092633_10778718_200.jpg",
            },
            Object {
              "order": 3,
              "size": "200",
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/09/26/33/12092633_10778716_200.jpg",
              },
              "url": "https://cdn-images.farfetch.com/12/09/26/33/12092633_10778716_200.jpg",
            },
          ],
          "isCustomizable": false,
          "isExclusive": false,
          "merchant": 10537,
          "merchantOrderId": 100001340,
          "orderItemStatus": null,
          "orderStatus": "CheckingStock",
          "price": Object {
            "discountExclTaxes": 0,
            "discountInclTaxes": 0,
            "discountRate": 0,
            "formattedPrice": "160,00 €",
            "formattedPriceWithoutCurrency": null,
            "formattedPriceWithoutDiscount": "160,00 €",
            "formattedPriceWithoutDiscountAndCurrency": null,
            "priceExclTaxes": 111.26,
            "priceInclTaxes": 160,
            "priceInclTaxesWithoutDiscount": 160,
            "tags": Array [
              "DDP",
            ],
            "taxType": "DDP",
            "taxesRate": 43.8107,
            "taxesValue": 48.74,
          },
          "productId": 12092633,
          "productSlug": "beach-sheet-12092633",
          "shippingService": Object {
            "description": "Express",
            "id": 33,
            "maxEstimatedDeliveryHour": 0,
            "minEstimatedDeliveryHour": 0,
            "name": "DHL Express",
            "type": "Express",
          },
          "shortDescription": "beach sheet",
          "size": "OS",
          "tag": Object {
            "id": undefined,
            "name": undefined,
          },
        },
      },
    },
    "result": Object {
      "billingAddress": Object {
        "addressLine1": "Uma rua em Gaia",
        "addressLine2": "Bloco B, nº 25, 2º Esq qwedsdasd",
        "addressLine3": null,
        "city": Object {
          "countryId": 165,
          "id": 0,
          "name": "Canidelo",
          "stateId": null,
        },
        "country": Object {
          "alpha2Code": "PT",
          "alpha3Code": "PRT",
          "continentId": 3,
          "culture": "pt-PT",
          "id": 165,
          "name": "Portugal",
          "nativeName": "Portugal",
          "region": "Europe",
          "regionId": 0,
          "subRegion": null,
          "subfolder": null,
        },
        "ddd": null,
        "firstName": "Nelson",
        "id": "00000000-0000-0000-0000-000000000000",
        "isDefaultBillingAddress": false,
        "isDefaultShippingAddress": false,
        "lastName": "Leite",
        "neighbourhood": null,
        "phone": "234234234",
        "state": Object {
          "code": "Porto",
          "countryId": 0,
          "id": 0,
          "name": "Porto",
        },
        "useShippingAsBillingAddress": false,
        "userId": 0,
        "vatNumber": null,
        "zipCode": "1234-567",
      },
      "createdDate": "/Date(1539688029817)/",
      "credit": 0,
      "formattedCredit": "0,00 €",
      "formattedGrandTotal": "1 225,00 €",
      "formattedSubTotalAmount": "1 225,00 €",
      "formattedTotalDiscount": "0,00 €",
      "formattedTotalDomesticTaxes": "0,00 €",
      "formattedTotalShippingFee": "0,00 €",
      "formattedTotalTaxes": "423,57 €",
      "grandTotal": 1225,
      "id": "3558DS",
      "items": Array [
        10070161,
        10070162,
        10070163,
      ],
      "newsletterSubscriptionOptionDefault": false,
      "paymentId": "TMADRWWJX2DPH2M7CTUX",
      "productImgQueryParam": undefined,
      "shippingAddress": Object {
        "addressLine1": "Uma rua em Gaia",
        "addressLine2": "Bloco B, nº 25, 2º Esq qwedsdasd",
        "addressLine3": null,
        "city": Object {
          "countryId": 165,
          "id": 0,
          "name": "Canidelo",
          "stateId": null,
        },
        "country": Object {
          "alpha2Code": "PT",
          "alpha3Code": "PRT",
          "continentId": 3,
          "culture": "pt-PT",
          "id": 165,
          "name": "Portugal",
          "nativeName": "Portugal",
          "region": "Europe",
          "regionId": 0,
          "subRegion": null,
          "subfolder": null,
        },
        "ddd": null,
        "firstName": "Nelson",
        "id": "00000000-0000-0000-0000-000000000000",
        "isDefaultBillingAddress": false,
        "isDefaultShippingAddress": false,
        "lastName": "Leite",
        "neighbourhood": null,
        "phone": "234234234",
        "state": Object {
          "code": "Porto",
          "countryId": 0,
          "id": 0,
          "name": "Porto",
        },
        "useShippingAsBillingAddress": false,
        "userId": 0,
        "vatNumber": null,
        "zipCode": "1234-567",
      },
      "siteKeys": Object {},
      "subTotalAmount": 1225,
      "taxType": "DDP",
      "totalDiscount": 0,
      "totalDomesticTaxes": 0,
      "totalQuantity": 3,
      "totalShippingFee": 0,
      "totalTaxes": 423.57,
      "updatedDate": "/Date(1539688029817)/",
      "userId": 29521154,
    },
  },
  "type": "@farfetch/blackout-core/GET_ORDER_DETAILS_SUCCESS",
}
`;

exports[`doGetOrderDetails() action creator should create the correct actions for when the get order details procedure is successful: get order details success payload 1`] = `
Object {
  "guest": false,
  "meta": Object {
    "isSplitByMerchantOrderCode": true,
    "orderId": "3558DS",
  },
  "payload": Object {
    "entities": Object {
      "brands": Object {
        "220482": Object {
          "description": "German born Tomas Maier headed to Paris.",
          "id": 220482,
          "name": "Tomas Maier",
          "priceType": 0,
        },
      },
      "categories": Object {
        "135967": Object {
          "gender": 0,
          "id": 135967,
          "name": "Clothing",
          "parentId": 0,
        },
        "135974": Object {
          "gender": 1,
          "id": 135974,
          "name": "Lifestyle",
          "parentId": 0,
        },
        "135981": Object {
          "gender": 0,
          "id": 135981,
          "name": "Trousers",
          "parentId": 135967,
        },
        "136273": Object {
          "gender": 0,
          "id": 136273,
          "name": "Palazzo Pants",
          "parentId": 135981,
        },
        "136301": Object {
          "gender": 0,
          "id": 136301,
          "name": "Shoes",
          "parentId": 0,
        },
        "136308": Object {
          "gender": 0,
          "id": 136308,
          "name": "Sandals",
          "parentId": 136301,
        },
        "136380": Object {
          "gender": 1,
          "id": 136380,
          "name": "Travel Accessories",
          "parentId": 135974,
        },
        "136383": Object {
          "gender": 0,
          "id": 136383,
          "name": "Lifestyle",
          "parentId": 0,
        },
        "136392": Object {
          "gender": 0,
          "id": 136392,
          "name": "Luggage & Travel Accessories",
          "parentId": 136383,
        },
      },
      "merchants": Object {
        "10537": Object {
          "id": 10537,
        },
        "10538": Object {
          "id": 10538,
        },
      },
      "orderItems": Object {
        "10070161": Object {
          "DEPRECATED_images": Object {
            "contextual": Object {},
            "details": Array [
              Object {
                "sources": Object {
                  "200": "https://cdn-images.farfetch.com/12/09/16/86/12091686_11099953_200.jpg",
                },
                "type": "image",
              },
              Object {
                "sources": Object {
                  "200": "https://cdn-images.farfetch.com/12/09/16/86/12091686_11099954_200.jpg",
                },
                "type": "image",
              },
              Object {
                "sources": Object {
                  "200": "https://cdn-images.farfetch.com/12/09/16/86/12091686_11099955_200.jpg",
                },
                "type": "image",
              },
            ],
            "primary": Object {
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/09/16/86/12091686_11099951_200.jpg",
              },
              "type": "image",
            },
            "secondary": Object {
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/09/16/86/12091686_11099952_200.jpg",
              },
              "type": "image",
            },
          },
          "attributes": Array [
            Object {
              "description": "Scale",
              "type": 2,
              "value": "204",
            },
            Object {
              "description": "Size",
              "type": 0,
              "value": "24",
            },
            Object {
              "description": "SizeDescription",
              "type": 1,
              "value": "7.5",
            },
          ],
          "brand": 220482,
          "categories": Array [
            136301,
            136308,
          ],
          "colors": Array [
            Object {
              "color": Object {
                "id": 112495,
                "name": "Black",
              },
              "tags": Array [
                "MainColor",
              ],
            },
            Object {
              "color": Object {
                "id": 0,
                "name": "BLACK",
              },
              "tags": Array [
                "DesignerColor",
              ],
            },
          ],
          "creationChannel": null,
          "customAttributes": null,
          "id": 10070161,
          "images": Array [
            Object {
              "order": 1,
              "size": "200",
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/09/16/86/12091686_11099951_200.jpg",
              },
              "url": "https://cdn-images.farfetch.com/12/09/16/86/12091686_11099951_200.jpg",
            },
            Object {
              "order": 2,
              "size": "200",
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/09/16/86/12091686_11099952_200.jpg",
              },
              "url": "https://cdn-images.farfetch.com/12/09/16/86/12091686_11099952_200.jpg",
            },
            Object {
              "order": 3,
              "size": "200",
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/09/16/86/12091686_11099953_200.jpg",
              },
              "url": "https://cdn-images.farfetch.com/12/09/16/86/12091686_11099953_200.jpg",
            },
            Object {
              "order": 4,
              "size": "200",
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/09/16/86/12091686_11099954_200.jpg",
              },
              "url": "https://cdn-images.farfetch.com/12/09/16/86/12091686_11099954_200.jpg",
            },
            Object {
              "order": 5,
              "size": "200",
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/09/16/86/12091686_11099955_200.jpg",
              },
              "url": "https://cdn-images.farfetch.com/12/09/16/86/12091686_11099955_200.jpg",
            },
          ],
          "isCustomizable": false,
          "isExclusive": false,
          "merchant": 10538,
          "merchantOrderId": 100001339,
          "orderItemStatus": null,
          "orderStatus": "CheckingStock",
          "price": Object {
            "discountExclTaxes": 0,
            "discountInclTaxes": 0,
            "discountRate": 0,
            "formattedPrice": "375,00 €",
            "formattedPriceWithoutCurrency": null,
            "formattedPriceWithoutDiscount": "375,00 €",
            "formattedPriceWithoutDiscountAndCurrency": null,
            "priceExclTaxes": 256.49,
            "priceInclTaxes": 375,
            "priceInclTaxesWithoutDiscount": 375,
            "tags": Array [
              "DDP",
            ],
            "taxType": "DDP",
            "taxesRate": 46.2071,
            "taxesValue": 118.51,
          },
          "productId": 12091686,
          "productSlug": "stud-sandal-12091686",
          "shippingService": Object {
            "description": "Express",
            "id": 33,
            "maxEstimatedDeliveryHour": 0,
            "minEstimatedDeliveryHour": 0,
            "name": "DHL Express",
            "type": "Express",
          },
          "shortDescription": "stud sandal",
          "size": "7.5",
          "tag": Object {
            "id": undefined,
            "name": undefined,
          },
        },
        "10070162": Object {
          "DEPRECATED_images": Object {
            "contextual": Object {},
            "details": Array [
              Object {
                "sources": Object {
                  "200": "https://cdn-images.farfetch.com/12/51/12/41/12511241_11981401_200.jpg",
                },
                "type": "image",
              },
              Object {
                "sources": Object {
                  "200": "https://cdn-images.farfetch.com/12/51/12/41/12511241_11981402_200.jpg",
                },
                "type": "image",
              },
              Object {
                "sources": Object {
                  "200": "https://cdn-images.farfetch.com/12/51/12/41/12511241_11981404_200.jpg",
                },
                "type": "image",
              },
            ],
            "primary": Object {
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/51/12/41/12511241_11981398_200.jpg",
              },
              "type": "image",
            },
            "secondary": Object {
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/51/12/41/12511241_11981399_200.jpg",
              },
              "type": "image",
            },
          },
          "attributes": Array [
            Object {
              "description": "Scale",
              "type": 2,
              "value": "125",
            },
            Object {
              "description": "Size",
              "type": 0,
              "value": "23",
            },
            Object {
              "description": "SizeDescription",
              "type": 1,
              "value": "28",
            },
          ],
          "brand": 220482,
          "categories": Array [
            135967,
            135981,
            136273,
          ],
          "colors": Array [
            Object {
              "color": Object {
                "id": 112495,
                "name": "Black",
              },
              "tags": Array [
                "MainColor",
              ],
            },
            Object {
              "color": Object {
                "id": 0,
                "name": "9100 CHALK",
              },
              "tags": Array [
                "DesignerColor",
              ],
            },
          ],
          "creationChannel": null,
          "customAttributes": null,
          "id": 10070162,
          "images": Array [
            Object {
              "order": 1,
              "size": "200",
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/51/12/41/12511241_11981398_200.jpg",
              },
              "url": "https://cdn-images.farfetch.com/12/51/12/41/12511241_11981398_200.jpg",
            },
            Object {
              "order": 2,
              "size": "200",
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/51/12/41/12511241_11981399_200.jpg",
              },
              "url": "https://cdn-images.farfetch.com/12/51/12/41/12511241_11981399_200.jpg",
            },
            Object {
              "order": 3,
              "size": "200",
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/51/12/41/12511241_11981401_200.jpg",
              },
              "url": "https://cdn-images.farfetch.com/12/51/12/41/12511241_11981401_200.jpg",
            },
            Object {
              "order": 4,
              "size": "200",
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/51/12/41/12511241_11981402_200.jpg",
              },
              "url": "https://cdn-images.farfetch.com/12/51/12/41/12511241_11981402_200.jpg",
            },
            Object {
              "order": 5,
              "size": "200",
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/51/12/41/12511241_11981404_200.jpg",
              },
              "url": "https://cdn-images.farfetch.com/12/51/12/41/12511241_11981404_200.jpg",
            },
          ],
          "isCustomizable": false,
          "isExclusive": false,
          "merchant": 10537,
          "merchantOrderId": 100001340,
          "orderItemStatus": null,
          "orderStatus": "CheckingStock",
          "price": Object {
            "discountExclTaxes": 0,
            "discountInclTaxes": 0,
            "discountRate": 0,
            "formattedPrice": "690,00 €",
            "formattedPriceWithoutCurrency": null,
            "formattedPriceWithoutDiscount": "690,00 €",
            "formattedPriceWithoutDiscountAndCurrency": null,
            "priceExclTaxes": 433.68,
            "priceInclTaxes": 690,
            "priceInclTaxesWithoutDiscount": 690,
            "tags": Array [
              "DDP",
            ],
            "taxType": "DDP",
            "taxesRate": 59.1032,
            "taxesValue": 256.32,
          },
          "productId": 12511241,
          "productSlug": "wide-leg-pant-12511241",
          "shippingService": Object {
            "description": "Express",
            "id": 33,
            "maxEstimatedDeliveryHour": 0,
            "minEstimatedDeliveryHour": 0,
            "name": "DHL Express",
            "type": "Express",
          },
          "shortDescription": "wide leg pant",
          "size": "28",
          "tag": Object {
            "id": undefined,
            "name": undefined,
          },
        },
        "10070163": Object {
          "DEPRECATED_images": Object {
            "contextual": Object {},
            "details": Array [
              Object {
                "sources": Object {
                  "200": "https://cdn-images.farfetch.com/12/09/26/33/12092633_10778716_200.jpg",
                },
                "type": "image",
              },
            ],
            "primary": Object {
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/09/26/33/12092633_10778720_200.jpg",
              },
              "type": "image",
            },
            "secondary": Object {
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/09/26/33/12092633_10778718_200.jpg",
              },
              "type": "image",
            },
          },
          "attributes": Array [
            Object {
              "description": "Scale",
              "type": 2,
              "value": "14",
            },
            Object {
              "description": "Size",
              "type": 0,
              "value": "17",
            },
            Object {
              "description": "SizeDescription",
              "type": 1,
              "value": "OS",
            },
          ],
          "brand": 220482,
          "categories": Array [
            135974,
            136383,
            136380,
            136392,
          ],
          "colors": Array [
            Object {
              "color": Object {
                "id": 112495,
                "name": "Black",
              },
              "tags": Array [
                "MainColor",
              ],
            },
            Object {
              "color": Object {
                "id": 0,
                "name": "GRAPHITE",
              },
              "tags": Array [
                "DesignerColor",
              ],
            },
          ],
          "creationChannel": null,
          "customAttributes": null,
          "id": 10070163,
          "images": Array [
            Object {
              "order": 1,
              "size": "200",
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/09/26/33/12092633_10778720_200.jpg",
              },
              "url": "https://cdn-images.farfetch.com/12/09/26/33/12092633_10778720_200.jpg",
            },
            Object {
              "order": 2,
              "size": "200",
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/09/26/33/12092633_10778718_200.jpg",
              },
              "url": "https://cdn-images.farfetch.com/12/09/26/33/12092633_10778718_200.jpg",
            },
            Object {
              "order": 3,
              "size": "200",
              "sources": Object {
                "200": "https://cdn-images.farfetch.com/12/09/26/33/12092633_10778716_200.jpg",
              },
              "url": "https://cdn-images.farfetch.com/12/09/26/33/12092633_10778716_200.jpg",
            },
          ],
          "isCustomizable": false,
          "isExclusive": false,
          "merchant": 10537,
          "merchantOrderId": 100001340,
          "orderItemStatus": null,
          "orderStatus": "CheckingStock",
          "price": Object {
            "discountExclTaxes": 0,
            "discountInclTaxes": 0,
            "discountRate": 0,
            "formattedPrice": "160,00 €",
            "formattedPriceWithoutCurrency": null,
            "formattedPriceWithoutDiscount": "160,00 €",
            "formattedPriceWithoutDiscountAndCurrency": null,
            "priceExclTaxes": 111.26,
            "priceInclTaxes": 160,
            "priceInclTaxesWithoutDiscount": 160,
            "tags": Array [
              "DDP",
            ],
            "taxType": "DDP",
            "taxesRate": 43.8107,
            "taxesValue": 48.74,
          },
          "productId": 12092633,
          "productSlug": "beach-sheet-12092633",
          "shippingService": Object {
            "description": "Express",
            "id": 33,
            "maxEstimatedDeliveryHour": 0,
            "minEstimatedDeliveryHour": 0,
            "name": "DHL Express",
            "type": "Express",
          },
          "shortDescription": "beach sheet",
          "size": "OS",
          "tag": Object {
            "id": undefined,
            "name": undefined,
          },
        },
      },
    },
    "result": Object {
      "billingAddress": Object {
        "addressLine1": "Uma rua em Gaia",
        "addressLine2": "Bloco B, nº 25, 2º Esq qwedsdasd",
        "addressLine3": null,
        "city": Object {
          "countryId": 165,
          "id": 0,
          "name": "Canidelo",
          "stateId": null,
        },
        "country": Object {
          "alpha2Code": "PT",
          "alpha3Code": "PRT",
          "continentId": 3,
          "culture": "pt-PT",
          "id": 165,
          "name": "Portugal",
          "nativeName": "Portugal",
          "region": "Europe",
          "regionId": 0,
          "subRegion": null,
          "subfolder": null,
        },
        "ddd": null,
        "firstName": "Nelson",
        "id": "00000000-0000-0000-0000-000000000000",
        "isDefaultBillingAddress": false,
        "isDefaultShippingAddress": false,
        "lastName": "Leite",
        "neighbourhood": null,
        "phone": "234234234",
        "state": Object {
          "code": "Porto",
          "countryId": 0,
          "id": 0,
          "name": "Porto",
        },
        "useShippingAsBillingAddress": false,
        "userId": 0,
        "vatNumber": null,
        "zipCode": "1234-567",
      },
      "createdDate": "/Date(1539688029817)/",
      "credit": 0,
      "formattedCredit": "0,00 €",
      "formattedGrandTotal": "1 225,00 €",
      "formattedSubTotalAmount": "1 225,00 €",
      "formattedTotalDiscount": "0,00 €",
      "formattedTotalDomesticTaxes": "0,00 €",
      "formattedTotalShippingFee": "0,00 €",
      "formattedTotalTaxes": "423,57 €",
      "grandTotal": 1225,
      "id": "3558DS",
      "items": Array [
        10070161,
        10070162,
        10070163,
      ],
      "newsletterSubscriptionOptionDefault": false,
      "paymentId": "TMADRWWJX2DPH2M7CTUX",
      "productImgQueryParam": "?c=2",
      "shippingAddress": Object {
        "addressLine1": "Uma rua em Gaia",
        "addressLine2": "Bloco B, nº 25, 2º Esq qwedsdasd",
        "addressLine3": null,
        "city": Object {
          "countryId": 165,
          "id": 0,
          "name": "Canidelo",
          "stateId": null,
        },
        "country": Object {
          "alpha2Code": "PT",
          "alpha3Code": "PRT",
          "continentId": 3,
          "culture": "pt-PT",
          "id": 165,
          "name": "Portugal",
          "nativeName": "Portugal",
          "region": "Europe",
          "regionId": 0,
          "subRegion": null,
          "subfolder": null,
        },
        "ddd": null,
        "firstName": "Nelson",
        "id": "00000000-0000-0000-0000-000000000000",
        "isDefaultBillingAddress": false,
        "isDefaultShippingAddress": false,
        "lastName": "Leite",
        "neighbourhood": null,
        "phone": "234234234",
        "state": Object {
          "code": "Porto",
          "countryId": 0,
          "id": 0,
          "name": "Porto",
        },
        "useShippingAsBillingAddress": false,
        "userId": 0,
        "vatNumber": null,
        "zipCode": "1234-567",
      },
      "siteKeys": Object {},
      "subTotalAmount": 1225,
      "taxType": "DDP",
      "totalDiscount": 0,
      "totalDomesticTaxes": 0,
      "totalQuantity": 3,
      "totalShippingFee": 0,
      "totalTaxes": 423.57,
      "updatedDate": "/Date(1539688029817)/",
      "userId": 29521154,
    },
  },
  "type": "@farfetch/blackout-core/GET_ORDER_DETAILS_SUCCESS",
}
`;
